# nicegui-tabulator

./: .gitignore  =0.7.1  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: main.yml  ruff-check.yml
examples/: README.md  main.py
examples/pages/: cell_slot.py  get_selected_data.py  pagination.py  theme.py
examples/utils/: intersection.py  module_utils.py
nicegui_tabulator/: __init__.py  version.py
nicegui_tabulator/core/: dependencies  dependencies.py  events.py  tabulator.js  tabulator.py  teleport.js  teleport.py  themes.py  types.py  utils.py
nicegui_tabulator/core/libs/: tabulator.min.css  tabulator.min.js  tabulator_bootstrap3.min.css  tabulator_bootstrap4.min.css  tabulator_bootstrap5.min.css  tabulator_bulma.min.css  tabulator_materialize.min.css  tabulator_midnight.min.css  tabulator_modern.min.css  tabulator_semanticui.min.css  tabulator_simple.min.css  tabulator_site.min.css  tabulator_site_dark.min.css
scripts/: css_processor.py
tests/: conftest.py  screen.py  test_tabulator.py
