[tool.poetry]
name = "nicegui-tabulator"
version = "0.1.6"
description = "This is a Python package that provides a simple way to create tables using the Tabulator library. It is built on top of the NiceGUI library."
authors = ["CrystalWindSnake <568166495@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nicegui = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
playwright = "^1.43.0"
pytest-playwright = "^0.5.0"
pandas = [
    {version = "^1.0.0", python = "~3.8"},
    {version = "^2.0.0", python = ">=3.9,<3.13"}
]
numpy = [
    {version = "^1.24.0", python = "~3.8"},
    {version = "^1.26.0", python = ">=3.9,<3.13"}
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
