[project]
name = "nicegui-tabulator"
version = "0.2.3"
description = "This is a Python package that provides a simple way to create tables using the Tabulator library. It is built on top of the NiceGUI library."
keywords = ["ui", "gui", "web", "NiceGUI", "table", "Tabulator"]
license = "MIT"
readme = "README.md"
authors = [
    { name = "CrystalWindSnake", email = "568166495@qq.com" }
]
requires-python = ">=3.9"

dependencies = [
    "nicegui~=3.0",
]

[dependency-groups]
dev = [
    "pytest~=8.3.5",
    "playwright==1.48.0",
    "pytest-playwright~=0.7",
    "pandas",
    "numpy",

]
git = [
    "pre-commit>=3.5.0",
]
lint = [
    "ruff==0.12.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nicegui_tabulator"]

[tool.hatch.build.targets.sdist]
only-include = ["nicegui_tabulator"]