[project]
name = "nicegui-tabulator"
version = "0.3.0"
description = "This is a Python package that provides a simple way to create tables using the Tabulator library. It is built on top of the NiceGUI library."
keywords = ["ui", "gui", "web", "NiceGUI", "table", "Tabulator"]
license = "MIT"
readme = "README.md"
authors = [
    { name = "CrystalWindSnake", email = "568166495@qq.com" }
]
requires-python = ">=3.9"

dependencies = [
    "nicegui~=3.5",
]

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "playwright"},
    {include-group = "lint"},
]

test = [
    "pytest>=8.3.5",
    "pandas",
    "numpy",
]

playwright = [
    "playwright==1.57.0",
    "pytest-playwright>=0.7.1",
]

git = [
    "pre-commit>=3.5.0",
]
lint = [
    "ruff==0.12.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nicegui_tabulator"]

[tool.hatch.build.targets.sdist]
only-include = ["nicegui_tabulator"]